test/compile_errors/err_goto_skip_init.w
//! expect-check-fail: goto would skip variable initialization

fn main:
    goto 'after
    let x = 1
    'after x
